using System.Collections;
using System.Collections.Generic;
using Photon.Pun;
using UnityEngine;

public class PlayerMovement : MonoBehaviour
{
    private PhotonView PV;
    private CharacterController myCC;
    private AvatarSetup avatarSetup;


    public float movementSpeed;
    public float rotationSpeed;
    public float gravity;
    public Camera camera;
    //public Vector3 myVector = Vector3.zero;

    // Start is called before the first frame update
    void Start()
    {
        PV = GetComponent<PhotonView>();
        myCC = GetComponent<CharacterController>();
        camera = GetComponent<AvatarSetup>().myCamera;
        avatarSetup = GetComponent<AvatarSetup>();
    }

    // Update is called once per frame
    void Update()
    {
        if (PV.IsMine)
        {
            BasicMovement();
            BasicRotation();
        }
    }

    void BasicMovement()
    {
        if (Input.GetKey(KeyCode.W))
        {
            myCC.Move(transform.forward * Time.deltaTime * movementSpeed);
            avatarSetup.animator.SetBool("Is_Forward", true);
            avatarSetup.animator.SetBool("Is_Back", false);
        }
        if (Input.GetKey(KeyCode.A))
        {
            myCC.Move(-transform.right * Time.deltaTime * movementSpeed);
            avatarSetup.animator.SetBool("Is_Left", true);
            avatarSetup.animator.SetBool("Is_Right", false);
        }
        if (Input.GetKey(KeyCode.S))
        {
            myCC.Move(-transform.forward * Time.deltaTime * movementSpeed);
            avatarSetup.animator.SetBool("Is_Back", true);
            avatarSetup.animator.SetBool("Is_Forward", false);
        }
        if (Input.GetKey(KeyCode.D))
        {
            myCC.Move(transform.right * Time.deltaTime * movementSpeed);
            avatarSetup.animator.SetBool("Is_Right", true);
            avatarSetup.animator.SetBool("Is_Left", false);
        }

        if(Input.GetKeyUp(KeyCode.D))
        {
            avatarSetup.animator.SetBool("Is_Right", false);
        }

        if (Input.GetKeyUp(KeyCode.E))
        {
            avatarSetup.animator.SetBool("Is_Left", false);
        }
        if (!myCC.isGrounded)
        {
            myCC.Move(-transform.up * Time.deltaTime * gravity);
        }
        else
        {
            avatarSetup.animator.SetBool("Is_Forward", false);
            avatarSetup.animator.SetBool("Is_Left", false);
            avatarSetup.animator.SetBool("Is_Right", false);
            avatarSetup.animator.SetBool("Is_Back", false);
        }

    }

    void BasicRotation()
    {
        float mouseX = Input.GetAxis("Mouse X") * Time.deltaTime * rotationSpeed;
        float mouseY = Input.GetAxis("Mouse Y") * Time.deltaTime * rotationSpeed;
        if(Input.GetAxis("Mouse Y") < 0)
        {
            camera.transform.Rotate(new Vector3(-mouseY, 0, 0));
        }
        else if (Input.GetAxis("Mouse Y") > 0)
        {
            camera.transform.Rotate(new Vector3(-mouseY, 0, 0));
        }
        transform.Rotate(new Vector3(0, mouseX, 0));
    }
}
